# concepts

./: CMakeLists.txt  README.md
src/: algebraic_concepts.h  matrix.h  regularity.h
test/: CMakeLists.txt  matrix_test.cpp  regularity_test.cpp  test_main.cpp
